[package]
name = "water-sim-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8", features = ["dynamic"] }
rand = "0.8"
ndarray = "0.15"
line_drawing = "1.0.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1